--- a/install/view/07_adminpassword.tmpl
+++ b/install/view/07_adminpassword.tmpl
@@ -3,18 +3,18 @@
 {block name="box"}
 		<table width="500" border="0" cellspacing="0" cellpadding="3">
 			<tr>
-				<td width="90">{Label installer.username}</td>
+				<td width="90">{Label installer.adminpassword.username}</td>
 				<td width="398">admin</td>
 			</tr><tr>
-				<td id="passwordLabel">{Label installer.password} *</td>
+				<td id="passwordLabel">{Label installer.adminpassword.password} *</td>
 				<td>
 					<input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password" id="password" value="" />
-					(at least 5 characters)
+					({Label installer.adminpassword.passwordHint})
 				</td>
 			</tr><tr>
-				<td id="passwordConfirmLabel">{Label installer.repeatPassword} *</td>
+				<td id="passwordConfirmLabel">{Label installer.adminpassword.repeatPassword} *</td>
 				<td>
-					<input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password_confirm" value="" id="password_confirm" />
+					<input type="password" name="password_confirm" value="" id="password_confirm" onkeyup="TodoyuInstaller.validatePasswordRepetition()" />
 				</td>
 			</tr>
 		</table>
