--- a/install/view/configs/system.php.tmpl
+++ b/install/view/configs/system.php.tmpl
@@ -20,11 +20,12 @@
 *  This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
-$CONFIG['SYSTEM']['name'] 		= '{$config.systemname}';
-$CONFIG['SYSTEM']['email']		= '{$config.email}';
-$CONFIG['SYSTEM']['language']	= '{$config.language}';
-$CONFIG['SYSTEM']['locale']		= '{$config.locale}';
+$CONFIG['SYSTEM']['name'] 		= '{$systemname}';
+$CONFIG['SYSTEM']['email']		= '{$email}';
+$CONFIG['SYSTEM']['language']	= '{$language}';
+$CONFIG['SYSTEM']['locale']		= '{$locale}';
 
 //$CONFIG['LOCALE']['defaultTimezone']= 'Europe/Zurich';
 
 $CONFIG['SYSTEM']['encryptionKey']	= '{$encryptionKey}';
+
