--- a/install/view/04_dbselect.tmpl
+++ b/install/view/04_dbselect.tmpl
@@ -1,7 +1,7 @@
 {extends main.tmpl}
 
 {block name="box"}
-		<table width="500" border="0" cellspacing="0" cellpadding="3">
+		<table style="margin-top:18px" width="500" border="0" cellspacing="0" cellpadding="3">
 			<tr>
 				<td width="109">{Label installer.selectDB}</td>
 				<td width="379">
