--- a/core/assets/css/list.css
+++ b/core/assets/css/list.css
@@ -28,9 +28,9 @@ table.list td {
 
 
 
-/* -----------------------------
+/* ------------
 	Hover
-   ----------------------------- */
+   ------------ */
    
 table.list tr:hover,
 table.list tr:hover .odd,
