--- a/install/view/04_dbselect.tmpl
+++ b/install/view/04_dbselect.tmpl
@@ -5,7 +5,7 @@
 			<tr>
 				<td width="109">{Label installer.selectDB}</td>
 				<td width="379">
-					<select name="database" type="text" id="database" value="{$fields.server}">
+					<select name="database" type="text" id="database">
 						{foreach $databases database}
 							<option value="{$database}">{$database}</option>
 						{/foreach}
@@ -14,7 +14,7 @@
 			</tr><tr>
 				<td>{Label installer.orCreateDB}</td>
 				<td>
-					<input onkeyup="TodoyuInstaller.checkDbSelect()" type="text" id="database_new" name="database_new" value="{$fields.database_new}" />
+					<input onkeyup="TodoyuInstaller.checkDbSelect()" type="text" id="database_new" name="database_new" value="{$postData.database_new}" />
 					<span id="error-newnameTaken" style="display:none;" class="error">{Label installer.error.nameTaken}</span>
 				</td>
 			</tr>
