--- a/install/view/configs/system.php.tmpl
+++ b/install/view/configs/system.php.tmpl
@@ -20,7 +20,7 @@
 *  This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
-$CONFIG['SYSTEM']['name'] 		= '{$systemname}';
+$CONFIG['SYSTEM']['name'] 		= '{$name}';
 $CONFIG['SYSTEM']['email']		= '{$email}';
 $CONFIG['SYSTEM']['language']	= '{$language}';
 $CONFIG['SYSTEM']['locale']		= '{$locale}';
